--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,12 @@
 body {
   font-family: 'Roboto', sans-serif;
-  font-size: 18px;
+  font-size: 1em;
+  min-height: 100vh;
+  min-width: 100%;
+  background-color: #f7f6f2;
   margin: 0;
-  padding-top: 40px;
+  color: #4b6587;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
